# bedrock

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  1.eslintrc.json  README.md  global.d.ts  next.config.js  package.json  tailwind.config.js  tsconfig.commonjs.json  tsconfig.json
.github/: test.yml
components/: CheckoutForm.tsx  Dashboard.tsx  FAQ.tsx  Featured.tsx  Mint.tsx  Modal.tsx  MyTokens.tsx  Notification.tsx  Page.tsx  WillsList.tsx
contracts/bedrock/: .gitignore  Cargo.toml  README.md  bedrock_base1.wasm
contracts/bedrock/contracts/bedrock-base/: Cargo.toml  bedrock_base.wasm
contracts/bedrock/contracts/bedrock-base/examples/: schema.rs
contracts/bedrock/contracts/bedrock-base/schema/: execute_msg.json  query_msg.json
contracts/bedrock/contracts/bedrock-base/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  test.rs
contracts/cw721-base/: cw721_base.wasm
contracts/cw721-base/src/: contract_tests.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs
contracts/rest-nft/: README.md
contracts/rest-nft-1/contracts/rest-nft-base/: rest_nft_base.wasm
contracts/rest-nft-1/contracts/rest-nft-base/src/: contract.rs  execute.rs
contracts/rest-nft/contracts/rest-nft-base/: Cargo.toml  rest_nft_base.wasm
contracts/rest-nft/contracts/rest-nft-base/examples/: schema.rs
contracts/rest-nft/contracts/rest-nft-base/schema/: execute_msg.json  instantiate_msg.json
contracts/rest-nft/contracts/rest-nft-base/src/: contract.rs  error.rs  execute.rs  state.rs  test.rs
lib/: cache.json  config.json  config.ts  contract.ts  db.ts  models.ts  prisma.ts  types.ts
lib/chain/: getClient.ts  mint.ts
lib/connectors/: index.ts
lib/constants/: addresses.ts
lib/utils/: api-client.ts  cookies.ts  currency.ts  getAllTokens.ts  getClient.ts  getTokens.ts  mint.ts  nft-mint.ts  olympusDAO.ts  terra.ts  uniswap.ts  uniswapv3.ts
pages/: [token_id].tsx  _app.tsx  _document.tsx  app.tsx  buttonLoader.tsx  index.backup.tsx  index.tsx  mintButton.tsx
pages/api/: config.ts  mint.ts  paymentIntent.ts  pinata.ts  swap.ts
pages/loonies/: index.tsx
prisma/: schema.prisma
public/: design-config.json  frontend-config.json  index.html
scripts/: build.contracts.mjs  build.schema.mjs  build.types.mjs  deploy.contracts.mjs  env.mjs  getNftFromPrisma.ts  metadataFromAirtable.ts
src/: finishMintComponent.tsx
styles/: globals.css
