[package]
name = "bedrock-base"
version = "0.9.3"
authors = ["Hank Breckenridge <breckenridgeh2@gmail.com>"]
edition = "2018"
description = "Extended CW721 NFT with more configurability"
license = "Apache-2.0"
repository = "https://github.com/senpai-so/bedrock"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cw0 = {  version = "0.9.1" }
cw2 = {  version = "0.9.1" }
cw721 = {  version = "0.9.2" }
cw721-base = { version = "0.9.1", features = ["library"] }
cw-storage-plus = "0.8.1"
terra-cosmwasm = "2.2.0"
cosmwasm-std = "0.16.0"
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
bedrock = { path="../../packages/bedrock", version = "0.9.1" }

[dev-dependencies]
cosmwasm-schema = "0.16.0" 
